Squash the last bug and clean up the code a touch more

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -239,7 +239,6 @@ body > .mobile-nav {
 	transition: filter 0.6s ease-in-out;
 	height: vh(100)!important;
 	max-height: vh(100)!important;
-	transform: translate(0px, 0px)!important;
 }
 
 .container {
